Fixed links overlapping the page

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
 }
 
 .nav {
+    display: flex;
     align-items: center;
     margin-bottom: 100px;
 }
